--- a/WebServer/app/index.html
+++ b/WebServer/app/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-            <title>Hello World 2</title>
+            <title>Hello World</title>
     </head>
     <body>
         <h1>
-            Hello World 2
+            Hello World
         </h1>
     </body>
 </html>
